refactor: 에러 메세지 수정
공통 에러 처리로 통일함
스케줄 중복 등록 에러 메세지 추가함
스케줄 정보 없을 시 에러 메세지 추가함